# Smart1

./: CMakeLists.txt  Smart1.sln
Smart1/: Layer.cu  Layer.h  Matrix.cu  Matrix.cuh  Network.cu  Network.h  Smart1.vcxproj  StandardActivationFunctions.cu  StandardActivationFunctions.cuh  StandardActivationFunctions.h  kernel.cu
